UP clases, pendiente labs

--- a/class/class-1.qmd
+++ b/class/class-1.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Clase 1 y 2"
-subtitle: "Políticas Públicas y Ciencia de Datos"
+subtitle: "Introducción a R"
 editor: visual
 include-after-body: 
   - ../html/footer_post.html
